--- a/html/index.html
+++ b/html/index.html
@@ -58,9 +58,8 @@
     <div id="footer">
       <div class="container">
         <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? אפשר כבר למזלג את
-<a target="_blank" href="https://gist.github.com/thedod/6028657#readme">עדכונים</a>
-ו<a target="_blank" href="https://gist.github.com/thedod/5912762">דעות ברשת</a>.
+זו גירסת אלפא. רוצים לתרום html/css/js? בואו
+<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
         </p>
       </div>
     </div>
