Change graphic branding to text
Remove footer from iframe pages,
since the iframe already has a footer :)

--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
   <!-- <style type="text/css">
   body { padding-top: 50px; }
   </style> -->
@@ -23,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="."><img src="img/logo-wide-20.png"></a>
+          <a class="navbar-brand" href=".">No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href=".">בית</a></li>
@@ -43,14 +42,6 @@
       <!-- Begin page content -->
       <div class="container">
         <p align="center"><iframe style="width:100%" width="300" height="9999" src="http://kesher.no2bio.org/" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
-      <div class="container">
-        <p class="text-muted credit text-center">
-<a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/2.5/il/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/2.5/il/80x15.png" /></a> This work is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/2.5/il/deed.en_US">Creative Commons Attribution 2.5 Israel License</a>.
-        </p>
       </div>
     </div>
 
