--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="."><img src="img/logo-wide-20.png"></a>
+          <a class="navbar-brand" href=".">No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">בית</a></li>
