--- a/html/contact.html
+++ b/html/contact.html
@@ -14,7 +14,6 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
 
-      <!-- Fixed navbar -->
       <div class="navbar navbar-fixed-top">
         <div class="container">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
@@ -26,9 +25,14 @@
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href=".">בית</a></li>
-              <li><a href="updates.html">עדכונים</a></li>
-              <li><a href="bloggers.html">דעות ברשת</a></li>
-              <li class="active"><a href="#">צרו קשר</a></li>
+              <li class="dropdown">
+                  <a data-toggle="dropdown" href="#">עדכונים <b class="caret"></b></a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                    <li><a href="updates.html">מבזקי נו2ביו</a></li>
+                    <li><a href="bloggers.html">דעות ברשת</a></li>
+                  </ul>
+              </li>
+              <li class="active"><a href="contact.html">צרו קשר</a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
               <li><a target="_blank" href="https://twitter.com/no2bio">טוויטר</a></li>
