--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,14 @@
           <a class="navbar-brand" href=".">No2Bio</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">בית</a></li>
-              <li><a href="updates.html">עדכונים</a></li>
-              <li><a href="bloggers.html">דעות ברשת</a></li>
+              <li class="active"><a href=".">בית</a></li>
+              <li class="dropdown">
+                  <a data-toggle="dropdown" href="#">עדכונים <b class="caret"></b></a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                    <li><a href="updates.html">מבזקי נו2ביו</a></li>
+                    <li><a href="bloggers.html">דעות ברשת</a></li>
+                  </ul>
+              </li>
               <li><a href="contact.html">צרו קשר</a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
