--- a/html/updates.html
+++ b/html/updates.html
@@ -29,8 +29,8 @@
               <li class="dropdown active">
                   <a data-toggle="dropdown" href="#">עדכונים <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                    <li><a href="updates.html">מבזקי נו2ביו</a></li>
-                    <li class="active"><a href="bloggers.html">דעות ברשת</a></li>
+                    <li class="active"><a href="updates.html">מבזקי נו2ביו</a></li>
+                    <li><a href="bloggers.html">דעות ברשת</a></li>
                   </ul>
               </li>
               <li><a href="contact.html">צרו קשר</a></li>
